--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -33,6 +34,10 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
 
+    //multidex dependency
+    implementation 'com.android.support:multidex:1.0.3'
+
+    //noinspection GradleCompatible
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
@@ -51,7 +56,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:17.0.0'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
     implementation 'com.google.firebase:firebase-appindexing:16.0.1'
-    implementation 'com.google.firebase:firebase-analytics:16.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
 
     // Firebase UI
     implementation 'com.firebaseui:firebase-ui-database:3.3.1'
@@ -63,6 +68,7 @@ dependencies {
     androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support:support-annotations:27.1.1'
 
     implementation 'com.google.firebase:firebase-auth:16.0.2'
